# MultiGML

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  best_params_rgcn.json  installation.sh  requirements.txt  runme.sh  setup.cfg  setup.py  tox.ini
data/graph/: extended_trimmed_kg_node_attribute_data.tsv
src/: __init__.py
src/multigml/: __init__.py  __main__.py  cli.py  constants.py
src/multigml/multigml_hetero/: DataModule.py  deployer_hyperopt.py  deployer_train.py  heterograph.py
src/multigml/multigml_hetero/model/: BaseRGAT.py  BaseRGCNHetero.py  LinkPredictHetero.py  MultiModalEmbedding.py  RelGraphConv.py  ScorePredictor.py  UniModalEmbedding.py
src/multigml/multigml_hetero/utils/: configure.py  evaluate_hyperopt.py  make_dir.py  prepare_model_graph.py  preprocess_features.py  preprocess_heterograph.py  storing.py  train_val_test_split.py  validation.py
