##########################
# Setup.py Configuration #
##########################
[metadata]
name = multigml
version = 0.0.1-dev
description = Using graph convolutional neural networks with multi-scale data on the MAVO knowledge graph for drug repositioning
long_description = file: README.rst

# URLs associated with the project
url = https://gitlab.scai.fraunhofer.de/sophia.krix/mavo
download_url = https://gitlab.scai.fraunhofer.de/sophia.krix/mavo.git
project_urls =
    Bug Tracker = https://gitlab.scai.fraunhofer.de/sophia.krix/mavo/-/issues
    Source Code = https://gitlab.scai.fraunhofer.de/sophia.krix/mavo/-/tree/master/src
    # TODO: Documentation = https://pybel.readthedocs.io

# Author information
author = Sophia Krix
author_email = sop3kri@gmail.com
maintainer = Sophia Krix
maintainer_email = sop3kri@gmail.com

# License Information
license = Apache License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Drug Repositioning
    Drug Repurposing
    Relational Graph Convolutional Neural Networks
    Heterogeneous Graphs
    Knowledge Graph

[options]
# TODO : check
#install_requires =






# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    multigml = multigml.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = multigml

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
